--- a/src/component/rsidenav/rsidenav.component.scss
+++ b/src/component/rsidenav/rsidenav.component.scss
@@ -8,7 +8,8 @@
 }
 
 .wrap-black {
-  height: 90%;
+  height: calc(100% - 60px);
+  min-height: 150px;
   background-color: rgb(34, 31, 31, 0.5);
   width: 60%;
   max-width: 800px;
@@ -73,14 +74,14 @@
 
 .innav {
   box-sizing: border-box;
-  background-color: rgb(240, 133, 133);
+  // background-color: rgb(240, 133, 133);
+  background-color: rgb(248, 230, 197, 1);
   width: 100%;
   padding: 20px;
   overflow-y: auto;
-  min-height: 200px;
-  max-height: 75vh;
+  height: calc(100% - 100px);
   scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: rgb(34, 31, 31) rgba(240, 133, 133, 0.5); /* For Firefox */
+  scrollbar-color: rgb(34, 31, 31) rgba(248, 230, 197, 1); /* For Firefox  or rgba(240, 133, 133, 0.5);*/
 }
 
 .innav::-webkit-scrollbar {
@@ -88,7 +89,7 @@
 }
 
 .innav::-webkit-scrollbar-track {
-  background: rgba(240, 133, 133, 0.5);
+  background: rgba(248, 230, 197, 1); /*rgba(240, 133, 133, 0.5);*/
 }
 
 .innav::-webkit-scrollbar-thumb {
